fix: remove internal API usage
Signed-off-by: Fred Bricon <fbricon@gmail.com>